set default image and quote for default

--- a/main/src/commands/index.html
+++ b/main/src/commands/index.html
@@ -22,9 +22,9 @@
     <div class="quote-container">
       <div class="quote-content">
         <h1 class="quote-text">
-          "This is a sample quote that can be generated dynamically."
+          "Life is 10% what happens to us and 90% how we react to it."
         </h1>
-        <p class="quote-author">- Author</p>
+        <p class="quote-author">- Charles R. Swindoll</p>
       </div>
       <!-- Button now contains the icon instead of text -->
       <button class="quote-btn" id="generateBtn">
